fix card sizes and wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,24 @@ body {
 .spacer {
   flex: 1 1 auto;
 }
+
+.flex-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  align-content: stretch;
+  align-items: stretch;
+  justify-content: space-evenly;
+}
+.sized {
+  margin: 10px;
+  max-width: 450px;
+  height: 100%;
+}
+.imagefit {
+  width: 75%;
+  height: auto;
+  margin: 10px;
+  align-self: center;
+}
